# allai-os

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md
agent/: README.md  pyproject.toml
agent/core/: __init__.py  errors.py  messages.py  policy.py  privacy.py  provider.py  router.py  task_classifier.py
agent/memory/: __init__.py  audit.py  commands.py  crypto.py  embeddings.py  injection_guard.py  injector.py  permissions.py  pii.py  retrieval.py  session.py  store.py
agent/prototype/: .gitignore  README.md  claude_loop.py  gemini_loop.py  integration_demo.py  ollama_loop.py  requirements.txt  run.py  setup_vm.sh  tools.py
agent/providers/: __init__.py  claude.py  gemini.py  ollama.py
agent/sandbox/: __init__.py  bwrap.py  policy.py  seccomp.py  selinux.py
agent/tests/: conftest.py  test_claude_provider.py  test_gemini_provider.py  test_memory_audit.py  test_memory_commands.py  test_memory_crypto.py  test_memory_embeddings.py  test_memory_injection_guard.py  test_memory_injector.py  test_memory_permissions.py  test_memory_pii.py  test_memory_retrieval.py  test_memory_session.py  test_memory_store.py  test_messages.py  test_ollama_provider.py  test_privacy.py  test_router.py  test_sandbox_bwrap.py  test_sandbox_policy.py  test_sandbox_seccomp.py  test_sandbox_selinux.py  test_task_classifier.py  test_tools_base.py  test_tools_executor.py  test_tools_fs.py  test_tools_memory.py  test_tools_registry.py  test_tools_shell.py  test_voice_pipewire.py  test_voice_provider.py  test_voice_stt_whisper.py  test_voice_tts_piper.py  test_voice_types.py  test_voice_wakeword.py
agent/tools/: __init__.py  app.py  base.py  browser.py  clipboard.py  executor.py  fs.py  keyboard.py  memory.py  mouse.py  notify.py  registry.py  screen.py  shell.py
agent/voice/: __init__.py  pipewire.py  provider.py  stt_whisper.py  tts_piper.py  types.py  wakeword.py
desktop/: README.md
distro/: README.md
distro/selinux/: Makefile  README.md  allai.fc  allai.if  allai.te
docs/: AI_ETHICS.md  architecture.md  prototype-results.md  threat-model.md
docs/adr/: 0000-template.md  0001-lenguaje-agente-core.md  0002-base-distro.md  0003-servidor-grafico.md  0004-ipc.md  0005-sandboxing.md  0006-modelo-permisos.md  0007-tooling-empaquetado.md  0008-telemetria.md  0009-memoria-local-cifrada.md  0010-modelo-sandboxing.md  README.md
installer/: README.md
system/: README.md
website/: README.md
