[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allai-agent"
version = "0.0.1"
description = "Agent core for allAI OS — hybrid Claude+Ollama agent that controls a Linux desktop"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Juan Manuel Castellanos Hernández", email = "juanmanuelcastellanoshernandez@gmail.com" },
]
keywords = ["ai", "agent", "claude", "ollama", "linux", "desktop"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
]

dependencies = [
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]
encrypted-store = [
    # SQLCipher binding. En Linux/macOS instala con `pip install
    # sqlcipher3-binary` (trae libsqlcipher embebido). En Windows
    # actualmente no hay wheel disponible — el desarrollo del módulo
    # de memoria se valida en VM Fedora.
    "sqlcipher3-binary>=0.5.0; platform_system != 'Windows'",
]
local-embeddings = [
    # Embeddings 100% locales para memoria semántica. Nunca APIs remotas.
    # Modelo por defecto en CPU: paraphrase-multilingual-MiniLM-L12-v2 (~500MB).
    # Modelo preferido con GPU compatible (sm_75+): BAAI/bge-m3 (~570MB).
    "sentence-transformers>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "memory", "providers", "tools", "voice"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "PT",   # pytest style
    "S",    # bandit security
]
ignore = [
    "PLR0913",  # too many arguments
    "S101",     # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"prototype/**" = ["S603", "S605", "S607"]  # prototipo no produccion

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
pretty = true

[[tool.mypy.overrides]]
module = ["ollama", "ollama.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.*", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests requiring real network/services (deselect with '-m \"not integration\"')",
    "slow: tests that take more than a second",
]
